fix align sobre nos

--- a/assets/css/cumpri.css
+++ b/assets/css/cumpri.css
@@ -181,8 +181,10 @@ h3 {
     margin-right: 10%;
 }
 
-#gif {
-    margin-right: 13%;
+.gif1 {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 /* arrumando a sobre mim */
@@ -204,14 +206,16 @@ h3 {
         flex-direction: column;
     }
 
+    header {
+        flex-direction: row;
+    }
+
     #sobre1 {
         padding: 5%;
         width: 90%;
     }
 
-    #gif {
-        margin: 10%;
-    }
+
 
     #hob-title {
         margin: 2%;
@@ -234,10 +238,7 @@ h3 {
         text-align: center;
     }
 
-    .container {
-        margin-left: 5%;
-        margin-right: 10%;
-    }
+ 
 
     #logoc {
         margin-left: 30%;
@@ -258,7 +259,7 @@ h3 {
     }
 
     #gif {
-        margin-left: -10%;
+        margin-right: 12%;
         height: 20%;
         width: 60%;
     }
